smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/list-empty-members.smithy
// Missing required member of shape `com.foo#MyList`: member
namespace com.foo

list MyList {}
